# MediaTranX

./: .gitignore  BUILD_STRATEGY.md  DEVELOPMENT.md  README.md  build.bat  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  translategemma-performance.md
scripts/: build.bat  build_electron.bat  build_python.bat  build_vue.bat
src/backend/: __init__.py  main.py  run_server.py  test.py
src/backend/api/: __init__.py  middleware.py
src/backend/api/routes/: __init__.py  files.py  health.py  setup.py  tasks.py
src/backend/api/schemas/: __init__.py  common.py
src/backend/configs/: __init__.py
src/backend/core/: __init__.py  device.py  ffmpeg.py  paths.py  whisper.py
src/backend/core/ai/: __init__.py  base_translator.py  model_manager.py  qwen3.py  registry.py  translategemma.py  translation.py  whisper.py
src/backend/core/models/: whisper.py
src/backend/services/: __init__.py  file_service.py  setup_service.py
src/backend/services/audio/: __init__.py  transcode_service.py
src/backend/services/document/: __init__.py  translate_service.py
src/backend/services/files/: file_service.py
src/backend/services/image/: __init__.py  convert_service.py  upscale_service.py
src/backend/services/video/: __init__.py  subtitle_service.py  transcode_service.py
src/backend/static/: index.html
src/backend/static/assets/: AudioView-BEUhkUiO.js  ConvertView-D_gWcq7P.js  ImageView-25Mkzyct.css  ImageView-CyVxojV9.js  SettingsView-CtNcLoOl.js  index-D6Nx20dx.js  index-znIjqbmF.css
src/backend/workers/: __init__.py  progress_tracker.py  task_manager.py
src/electron/: main.js  package-lock.json  package.json  preload.cjs  splash.html
src/frontend/: .env  .env.development  FRONTEND_STYLE.md  index.html  main.js  package-lock.json  package.json  preload.cjs  preload.js  vite.config.ts
src/frontend/scripts/: afterPack.cjs  installer.nsh
src/frontend/src/: App.vue  main.ts  vue.d.ts
src/frontend/src/assets/: base.css  main.css
src/frontend/src/components/: AppToast.vue  FilePreview.vue  MainSidebar.vue  SettingsModal.vue  Sidebar.vue  Titlebar.vue  ToolLayout.vue
src/frontend/src/composables/: index.ts  useApi.ts  useFileDownload.ts  useProgress.ts  useSubmitTask.ts  useTheme.ts  useToast.ts
src/frontend/src/router/: index.ts
src/frontend/src/stores/: files.ts  index.ts  settings.ts  tasks.ts
src/frontend/src/styles/: settings-shared.scss  tool-panels-shared.scss
src/frontend/src/types/: api.ts  index.ts  media.ts  task.ts
src/frontend/src/utils/: mediaType.ts
src/frontend/src/views/: AudioView.vue  DocumentView.vue  HistoryView.vue  HomeView.vue  ImageView.vue  SettingsView.vue  (+3 more)
(+53 files in other folders)
